tests/snapshots/snapshot_tests__snapshot_compatibility_report_incompatible.snap
---
source: tests/snapshot_tests.rs
expression: r
---
{
  "compatible": false,
  "native_count": 1,
  "emulated_count": 0,
  "unsupported_count": 2,
  "summary": "incompatible (2 unsupported)",
  "details": [
    [
      "streaming",
      {
        "level": "native"
      }
    ],
    [
      "mcp_client",
      {
        "level": "unsupported",
        "reason": "unsupported"
      }
    ],
    [
      "mcp_server",
      {
        "level": "unsupported",
        "reason": "unsupported"
      }
    ]
  ]
}
