tests/snapshots/snapshot_tests__snapshot_context_packet_empty.snap
---
source: tests/snapshot_tests.rs
expression: "ContextPacket::default()"
---
{
  "files": [],
  "snippets": []
}
