tests/snapshots/snapshot_tests__snapshot_envelope_event.snap
---
source: tests/snapshot_tests.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2025-06-01T10:00:00Z",
    "type": "assistant_delta",
    "text": "token"
  }
}
