tests/snapshots/snapshot_tests__snapshot_envelope_fatal_no_ref.snap
---
source: tests/snapshot_tests.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "handshake failed",
  "error_code": "protocol_version_mismatch"
}
