tests/snapshots/snapshot_tests__snapshot_envelope_fatal_simple.snap
---
source: tests/snapshot_tests.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-001",
  "error": "sidecar process exited unexpectedly"
}
