tests/snapshots/snapshot_tests__snapshot_envelope_fatal_with_code.snap
---
source: tests/snapshot_tests.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-002",
  "error": "backend timed out",
  "error_code": "BACKEND_TIMEOUT"
}
