tests/snapshots/snapshot_tests__snapshot_envelope_hello_empty_caps.snap
---
source: tests/snapshot_tests.rs
expression: snap_json(&env)
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "mock",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "mapped"
}
